--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,11 +2,11 @@ Package: RSVSim
 Type: Package
 Title: RSVSim: an R/Bioconductor package for the simulation of
         structural variations
-Version: 1.23.0
-Date: 2015-05-05
+Version: 1.23.1
+Date: 2019-01-22
 Author: Christoph Bartenhagen
 Maintainer: Christoph Bartenhagen
-        <christoph.bartenhagen@uni-muenster.de>
+        <c.bartenhagen@uni-koeln.de>
 Imports: methods, IRanges, ShortRead
 Depends: R (>= 3.0.0), Biostrings, GenomicRanges
 Suggests: BSgenome.Hsapiens.UCSC.hg19, BSgenome.Hsapiens.UCSC.hg19.masked, MASS, rtracklayer
